eliminar setInterval y dar mayor fluidez al movimiento del fondo con windows.requestAnimationFrame

--- a/index.html
+++ b/index.html
@@ -8,7 +8,44 @@
   <title>Hack Bros Game</title>
 </head>
 <body>
+  <h1>Hack Bros</h1>
+  <h2>Project Game</h2>
+  <p class="sinopsis">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+     Fusce neque sapien, venenatis vitae pharetra vel, convallis quis felis. 
+     Sed quam lacus, congue eget sagittis at, vestibulum vel augue. 
+     Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
+     Morbi quis magna id nisl scelerisque commodo. Curabitur sit amet orci nisl. 
+     Sed blandit augue dignissim risus varius, nec vulputate lacus molestie. 
+     Integer non placerat orci.</p>
+
+  <canvas id="canvasGame"></canvas>
   
+  <h3>Score Board</h3>
+  <table>
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Score</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th>.</th>
+        <th>.</th>
+      </tr>
+      <tr>
+        <th>.</th>
+        <th>.</th>
+      </tr>
+      <tr>
+        <th>.</th>
+        <th>.</th>
+      </tr>
+    </tbody>
+  </table>
+  
+  <script src="js/background.js"></script>
+  <script src="js/game.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
