--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
   </table>
   
   <script src="js/background.js"></script>
+  <script src="js/pj.js"></script>
   <script src="js/game.js"></script>
   <script src="js/main.js"></script>
 </body>
