--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   
   <script src="js/background.js"></script>
   <script src="js/pj.js"></script>
+  <script src="js/collision.js"></script>
   <script src="js/game.js"></script>
   <script src="js/main.js"></script>
 </body>
