--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
   <title>Hack Bros Game</title>
 </head>
 <body>
-  <h1>Hack Bros</h1>
-  <h2>Project Game</h2>
-  <p class="sinopsis">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-     Fusce neque sapien, venenatis vitae pharetra vel, convallis quis felis. 
-     Sed quam lacus, congue eget sagittis at, vestibulum vel augue. 
-     Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
-     Morbi quis magna id nisl scelerisque commodo. Curabitur sit amet orci nisl. 
-     Sed blandit augue dignissim risus varius, nec vulputate lacus molestie. 
-     Integer non placerat orci.</p>
+  <header>
+    <h1>Hack Bros</h1>
+    <h2>Project Game</h2>
+  </header>
+  <div class="content">
 
-  <canvas id="canvasGame"></canvas>
-  
+      <canvas id="canvasGame"></canvas>
+  </div>
+
+
+  <div class="bottom">
   <h3>Score Board</h3>
   <table>
     <thead>
@@ -42,7 +41,7 @@
         <th>.</th>
       </tr>
     </tbody>
-  </table>
+  </table></div>
   
   <script src="js/background.js"></script>
   <script src="js/pj.js"></script>
