--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./bootstrap_4_2_1/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
   <title>Hack Bros Game</title>
 </head>
 <body>
-  <header>
-    <h1>Hack Bros</h1>
-    <h2>Project Game</h2>
-  </header>
+  <div class="header">
+    <div class="title">
+      <h1>Hack Bros</h1>
+      <h2>Project Game</h2>
+    </div>
+  </div>
   <div class="content">
 
       <canvas id="canvasGame"></canvas>
@@ -19,6 +22,7 @@
 
 
   <div class="bottom">
+      <button type="button" class="btn btn-info" onclick="abre()">Start</button>
   <h3>Score Board</h3>
   <table>
     <thead>
@@ -43,6 +47,8 @@
     </tbody>
   </table></div>
   
+  <script src="./bootstrap_4_2_1/bootstrap.min.js"></script>
+  <script src="./bootstrap_4_2_1/popper.min.js"></script>
   <script src="js/background.js"></script>
   <script src="js/pj.js"></script>
   <script src="js/obstacles.js"></script>
