No consegui montarlo, por separado los obstaculos funcionan pero cuando intento ponerle varios peta

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
   <div class="header">
     <div class="title">
-      <h1>Hack Bros</h1>
-      <h2>Project Game</h2>
+      <span><i>Ayuda a nuestros amigos Bros y Hack</i></span>
     </div>
   </div>
   <div class="content">
@@ -22,30 +21,8 @@
 
 
   <div class="bottom">
-      <button type="button" class="btn btn-info" onclick="abre()">Start</button>
-  <h3>Score Board</h3>
-  <table>
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Score</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th>.</th>
-        <th>.</th>
-      </tr>
-      <tr>
-        <th>.</th>
-        <th>.</th>
-      </tr>
-      <tr>
-        <th>.</th>
-        <th>.</th>
-      </tr>
-    </tbody>
-  </table></div>
+      <button type="button" class="btn btn-warning btn-block  " onclick="abre()">Start</button>
+      </div>
   
   <script src="./bootstrap_4_2_1/bootstrap.min.js"></script>
   <script src="./bootstrap_4_2_1/popper.min.js"></script>
